18 June 2008

* Show arrows at either end of status line when scrolled if more windows
  exist. Highlight the arrow if a hidden window has activity or bell.
* Scroll the status line to show the current window if necessary. Also handle
  windows smaller than needed better (show a blank status line instead of
  hanging or crashing).

17 June 2008

* tmux 0.3 released.

16 June 2008

* Add some information messages when window options are changed, suggested by
  Mike Erdely. Also add a -q command-line option to suppress them.
* show-window-options (showw) command.

15 June 2008

* show-options (show) command to show one or all options.

14 June 2008

* New window options: force-width and force-height. This will force a window
  to an arbitrary width and height (0 for the default unlimited). This is
  neat for emacs which doesn't have a sensible way to force hard wrapping at 80
  columns. Also, don't try to be clever and use clr_eol when redrawing the
  whole screen, it causes trouble since the redraw functions are used to draw
  the blank areas too.
* Clear the blank area below windows properly when they are smaller than client,
  also add an indicator line to show the vertical limit.
* Don't die on empty strings in config file, reported by Will Maier.

08 June 2008

* Set socket mode +x if any sessions are attached and -x if not.

07 June 2008

* Make status-interval actually changable.

06 June 2008

* New window option: aggressive-resize. Normally, windows are resized to the
  size of the smallest attached session to which they are linked. This means a
  window only changes size when sessions are detached or attached, or they are
  linked or unlinked from a session. This flag changes a window to be the size
  of the smallest attached session for which it is the current window - it is
  resized every time a session changes to it or away from it. This is nice for
  things that handle SIGWINCH well (like irssi) and bad for things like shells.